<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    />
    <EditText
        android:id="@+id/EditTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="text"
        android:minHeight="48dp"
        android:layout_marginTop="150dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.326"
        tools:layout_editor_absoluteX="-16dp">

    </EditText>

    <EditText
        android:id="@+id/EditTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:layout_marginTop="40dp"
        android:layout_below="@id/EditTextUsername"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditTextUsername"
        app:layout_constraintVertical_bias="0.148"
        tools:layout_editor_absoluteX="0dp">

    </EditText>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="login"
        android:text="@string/login"
        android:layout_marginTop="70dp"
        android:layout_below="@id/EditTextPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditTextPassword"
        app:layout_constraintVertical_bias="0.148"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/loginGuestButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="loginAsGuest"
        android:text="@string/loginGuest"
        android:layout_marginTop="30dp"
        android:layout_below="@id/loginButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        app:layout_constraintVertical_bias="0.139"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/loginGoogleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="loginWithGoogle"
        android:text="@string/loginGoogle"
        android:layout_marginTop="30dp"
        android:layout_below="@id/loginGuestButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginGuestButton"
        app:layout_constraintVertical_bias="0.136"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:onClick="register"
        android:layout_marginTop="30dp"
        android:layout_below="@id/loginGoogleButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginGoogleButton"
        app:layout_constraintVertical_bias="0.321"
        tools:ignore="UsingOnClickInXml" />
    </RelativeLayout>
